# GoodReminder

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  main.cpp  main.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/sources/: global.cpp  global.h
app/src/main/cpp/sources/android_data/: android_data.cpp  android_data.h
app/src/main/cpp/sources/app_manager/: app_manager.cpp  app_manager.h
app/src/main/cpp/sources/good_reminder/: app_layout.cpp  app_layout.h  data_structures.cpp  data_structures.h  initial_window.cpp  initial_window.h
app/src/main/cpp/sources/helpers/: color.cpp  color.h  helpers.h
app/src/main/cpp/sources/opengl_wrappers/: framebuffer.cpp  framebuffer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_buffer.cpp
app/src/main/cpp/sources/program_stages/: calendar_stage.cpp  calendar_stage.h  current_day_stage.cpp  current_day_stage.h  loading_stage.cpp  loading_stage.h  older_day_stage.cpp  older_day_stage.h  scrollable.cpp  scrollable.h  thank_you_stage.cpp  thank_you_stage.h
app/src/main/java/com/hello/goodreminder/: MainActivity.java
app/src/main/java/knz/goodreminder/: MainActivity.java  MainActivity.kt
design;/: info;.md
